# fist-of-five

./: .gitignore
fist-of-five-server/: .env  pyproject.toml
fist-of-five-server/alembic/: env.py
fist-of-five-server/alembic/versions/: 652da196334a_authentication_authorization.py  806eebb7997b_authentication_authorization.py
fist-of-five-server/src/: app.py
fist-of-five-server/src/domain/auth/: models.py
fist-of-five-server/src/domain/auth/service/: auth_service.py
fist-of-five-server/src/exposition/auth/: auth.py
fist-of-five-server/src/infrastructure/: __init__.py
fist-of-five-server/src/management/auth/: auth_management.py
fist-of-five-server/src/utils/: password_encryption_utility.py
fist-of-five-web/: .gitignore  README.md  angular.json  package-lock.json  package.json
fist-of-five-web/src/: index.html  styles.scss
fist-of-five-web/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts
fist-of-five-web/src/app/auth/login/: login.component.html  login.component.scss  login.component.ts
